OX-3277: filter panel rendering fixed on IE7

--- a/www/admin/assets/css/interface-ltr.css
+++ b/www/admin/assets/css/interface-ltr.css
@@ -1059,7 +1059,6 @@ input.checkbox {
 
 #campaign-zone #filters {
   line-height: 170%;
-  height: 2ex;
 }
 
 #campaign-zone #available,
